packages/styles/scss/components/combo-button/_combo-button.scss
//
// Copyright IBM Corp. 2023
//
// This source code is licensed under the Apache-2.0 license found in the
// LICENSE file in the root directory of this source tree.
//

@use '../button';
@use '../menu';
@use '../../config' as *;
@use '../../motion' as *;
@use '../../utilities/convert';
@use '../../utilities/custom-property';

/// Combo Button styles
/// @access public
/// @group combo-button
@mixin combo-button {
  .#{$prefix}--combo-button__container {
    display: inline-flex;
    column-gap: convert.to-rem(1px);
  }

  $triggerSizes: (
    'sm': convert.to-rem(32px),
    'md': convert.to-rem(40px),
    'lg': convert.to-rem(48px),
  );

  @each $size, $trigger in $triggerSizes {
    .#{$prefix}--combo-button__container--#{$size}
      .#{$prefix}--combo-button__primary-action {
      min-inline-size: 12rem - convert.to-rem(1px) - $trigger;
    }
  }

  .#{$prefix}--combo-button__primary-action .#{$prefix}--btn {
    inline-size: 100%;
    max-inline-size: convert.to-rem(240px);
    min-inline-size: convert.to-rem(160px);
  }

  .#{$prefix}--combo-button__primary-action span {
    display: block;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
  }

  .#{$prefix}--combo-button__ellipsis {
    text-overflow: ellipsis;
    text-wrap: nowrap;
  }

  .#{$prefix}--combo-button__trigger svg {
    transition: transform $duration-fast-02 motion(standard, productive);
  }

  .#{$prefix}--combo-button__container--open
    .#{$prefix}--combo-button__trigger
    svg {
    transform: rotate(180deg);
  }
}

// ==================test==========================================

.#{$prefix}--combo-button__menu-top {
  $popover-offset: custom-property.get-var('popover-offset', 3rem);

  inset-block-start: 0;
  inset-inline-start: 50%;
  transform: translate(0%, calc(-100% - $popover-offset));
}

.#{$prefix}--combo-button__menu-top-left {
  $popover-offset: custom-property.get-var('popover-offset', 3rem);

  inset-block-start: 0;
  inset-inline-end: 0;
  transform: translate(
    calc(0 * $popover-offset),
    calc(-100% - $popover-offset)
  );
}

.#{$prefix}--combo-button__menu-top-right {
  $popover-offset: custom-property.get-var('popover-offset', 3rem);

  inset-block-start: 0;
  inset-inline-start: initial;
  transform: translate(
    calc(0 * $popover-offset),
    calc(-100% - $popover-offset)
  );
}

.#{$prefix}--combo-button__menu-bottom-left {
  $popover-offset: custom-property.get-var('popover-offset', 3rem);

  inset-inline-end: 0;
  inset-inline-start: initial;
}

